--- a/cdk/package.json
+++ b/cdk/package.json
@@ -14,16 +14,16 @@
     "cdk:destroy": "cdk destroy"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.6",
-    "@types/node": "20.8.7",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.30",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "~5.2.2"
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.4.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.110.0",
-    "constructs": "^10.0.0",
+    "aws-cdk-lib": "^2.135.0",
+    "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
   }
 }
