--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "aws-amplify": "^6.0.18",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "aws-amplify": "^6.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.1",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.4.3",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.4.0",
+    "postcss": "^8.4.35",
+    "nth-check": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +42,25 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.35"
+  },
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.35",
+    "resolve-url-loader": "^5.0.0",
+    "svgo": "^3.2.0",
+    "css-select": "^5.1.0",
+    "@svgr/plugin-svgo": "^8.1.0", 
+    "@svgr/webpack": "^8.1.0"
+  },
+  "resolutions": {
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.35",
+    "resolve-url-loader": "^5.0.0",
+    "svgo": "^3.2.0",
+    "css-select": "^5.1.0",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@svgr/webpack": "^8.1.0"
   }
 }
