--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
-    "aws-amplify": "^6.0.20",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^5.3.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.4.3",
-    "uuid": "^9.0.1",
-    "web-vitals": "^3.4.0",
-    "postcss": "^8.4.35",
-    "nth-check": "^2.1.1"
+    "react-router-dom": "^6.30.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,8 +38,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.35"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   },
   "overrides": {
     "nth-check": "^2.1.1",
@@ -51,7 +48,7 @@
     "resolve-url-loader": "^5.0.0",
     "svgo": "^3.2.0",
     "css-select": "^5.1.0",
-    "@svgr/plugin-svgo": "^8.1.0", 
+    "@svgr/plugin-svgo": "^8.1.0",
     "@svgr/webpack": "^8.1.0"
   },
   "resolutions": {
