--- a/lambda/package.json
+++ b/lambda/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1582.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "crypto": "^1.0.1"
   },
   "keywords": [
     "aws",
