--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "aws-amplify": "^5.3.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qrcode-logo": "^2.11.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
